--- a/src/components/ProductListItem/ProductListItem.css
+++ b/src/components/ProductListItem/ProductListItem.css
@@ -6,6 +6,14 @@
   max-width: 240px;
 }
 
+.card h2 {
+  font-size: 18px;
+}
+
+.card.sale {
+  background-color: #e8f6ff;
+}
+
 .card button {
   background-color: #0a84ff;
   color: #fff;
